Set TOKEN and CA_PEM for crossplane

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,8 +34,8 @@ jobs:
           FORCE_DEPLOY_WHEN_NO_SEMVER: ${{ github.event.deployment.payload.variables.FORCE_DEPLOY_WHEN_NO_SEMVER }}
           KUBE_NAMESPACE: ${{ github.event.deployment.payload.variables.KUBE_NAMESPACE }}
           KUBE_URL: ${{ secrets.KUBE_URL }}
-          KUBE_CA_PEM: ${{ secrets.KUBE_CA_PEM }}
-          KUBE_TOKEN: ${{ secrets.KUBE_TOKEN }}
+          KUBE_CA_PEM: ${{ secrets.KUBE_CA_PEM_CROSSPLANE }}
+          KUBE_TOKEN: ${{ secrets.KUBE_TOKEN_CROSSPLANE }}
           NEXUS_USER: ${{ secrets.NEXUS_USER }}
           NEXUS_TOKEN: ${{ secrets.NEXUS_TOKEN }}
           NEXUS_URL: ${{ secrets.NEXUS_URL }}
